--- a/www/A propos.html
+++ b/www/A propos.html
@@ -13,10 +13,10 @@
     </head>
     <body>
         <div class="app">
-            <h1>Apache Cordova</h1>
+            <h1>A propos</h1>
             <div id="deviceready" class="blink">
-                <p class="event listening">Connecting to Device</p>
-                <p class="event received">Device is Ready</p>
+                <p class="event listening">Connexion au lecteur</p>
+                <p class="event received">Appareil connecte</p>
             </div>
         </div>
         <script type="text/javascript" src="cordova.js"></script>
